# game-server-management

./: .dockerignore  .gitignore  CNAME  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  compose.yml  crates.js  help.html  rust-toolchain.toml  settings.html  src-files.js
.github/ISSUE_TEMPLATE/: bug_report.md  custom_issue.md  feature_request.md
.github/agents/: speckit.taskstoissues.agent.md
.github/workflows/: doc-quality.yml  docker-release.yaml  docs.yml  pr-pipelines.yaml  tagger.yaml
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
apps/enshrouded/: Cargo.toml
apps/enshrouded/src/: environment.rs  game_settings.rs  main.rs  webhooks.rs
apps/enshrouded/src/utils/: config_io.rs  env_overrides.rs  extract_player_name.rs  mod.rs
apps/gsm-cli/: Cargo.toml
apps/gsm-cli/src/: environment.rs  main.rs
apps/palworld/: Cargo.toml
apps/palworld/src/: environment.rs  game_settings.rs  main.rs
apps/palworld/src/utils/: extract_player_name.rs  mod.rs
apps/palworld/tmp/tests/: test_config.ini
apps/swords_and_magic/: Cargo.toml
docs/: CONTRIBUTING.md  RELEASE_GUIDE.md  index.html
docs/gsm-docs/: Cargo.toml
enshrouded/: all.html  enum.Commands.html  fn.main.html  index.html  struct.Cli.html
enshrouded/environment/: fn.name.html  index.html  sidebar-items.js
enshrouded/game_settings/: fn.load_or_create_config.html  index.html  macro.env_field_mapping!.html  macro.env_field_mapping.html  sidebar-items.js  struct.GameSettings.html  struct.ServerConfig.html  struct.UserGroup.html
enshrouded/utils/: index.html  sidebar-items.js
env_parse/: all.html  index.html  macro.env_parse!.html  macro.env_parse.html  sidebar-items.js
env_parser/: all.html  fn.extract_env_vars_from_file.html  fn.find_cargo_toml_files.html  fn.find_rust_files.html  fn.main.html  fn.process_cargo_toml.html  index.html  sidebar-items.js  struct.Cli.html  struct.EnvVarInfo.html
gsm_backup/: all.html  enum.BackupError.html  fn.backup.html  index.html  sidebar-items.js
gsm_cli/: all.html  enum.Commands.html  fn.main.html  fn.unwrap_or_exit.html  index.html  sidebar-items.js  struct.Cli.html  struct.InstallCommand.html  struct.MonitorCommand.html  struct.ResolvedOptions.html  struct.RuntimeCommand.html  struct.SharedOptions.html  struct.UpdateCommand.html
gsm_cli/environment/: fn.app_id.html  fn.executable.html  fn.first_non_empty.html  fn.force_windows.html  fn.install_args.html  fn.install_path.html  fn.launch_args.html  fn.launch_mode.html  fn.name.html  fn.parse_launch_mode.html  fn.split_shell_like_values.html  index.html  sidebar-items.js
gsm_cron/: all.html  fn.begin_cron_loop.html  fn.register_job.html  fn.spawn_scheduled_job.html  index.html  sidebar-items.js
gsm_cron/cron_loop/: fn.begin_cron_loop.html
gsm_docs/: all.html  index.html
gsm_instance/: all.html  index.html  sidebar-items.js  struct.Instance.html
gsm_instance/config/: enum.LaunchMode.html  index.html  sidebar-items.js  struct.InstanceConfig.html
gsm_instance/errors/: enum.InstanceError.html  index.html  sidebar-items.js
gsm_instance/install/: fn.install.html  index.html
gsm_mod_manager/: all.html  enum.ModError.html  fn.main.html  index.html  sidebar-items.js  struct.ManagedMod.html  struct.VariantNotFound.html
gsm_monitor/: all.html  fn.start_instance_log_monitor.html  fn.start_monitor_in_thread.html  index.html  sidebar-items.js  struct.LogRule.html  struct.LogRules.html  struct.Monitor.html
gsm_notifications/: all.html  enum.NotificationError.html  fn.send_notification.html  index.html  sidebar-items.js  struct.DiscordDispatcher.html  struct.GenericDispatcher.html  struct.NotificationPayload.html  trait.NotificationDispatcher.html
gsm_serde/: all.html  index.html  sidebar-items.js
gsm_shared/: all.html  fn.fetch_multiple_var.html  fn.fetch_public_address.html  fn.fetch_var.html  fn.get_md5_hash.html  fn.get_working_dir.html  fn.is_env_var_truthy.html  fn.is_env_var_truthy_no_cache.html  fn.is_env_var_truthy_prime_cache.html  fn.is_valid_url.html  fn.normalize_paths.html  fn.parse_file_name.html  fn.parse_truthy.html  fn.path_exists.html  fn.url_parse_file_type.html  index.html  sidebar-items.js  static.IS_ENV_VAR_TRUTHY.html  struct.IPConfig.html
ini_derive/: all.html  derive.IniSerialize.html  index.html  sidebar-items.js
libs/gsm-cron/: Cargo.toml
libs/gsm-cron/src/: cron_loop.rs  lib.rs
libs/gsm-instance/: Cargo.toml
libs/gsm-instance/src/: config.rs  errors.rs  executable.rs  install.rs  instance.rs  launcher.rs  lib.rs  process.rs  shutdown.rs  startup.rs  steamcmd.rs  update.rs
libs/gsm-instance/src/proton/: mod.rs  releases.rs  types.rs
libs/gsm-mod-manager/: Cargo.toml
libs/gsm-mod-manager/src/: constants.rs  errors.rs  lib.rs  managed_mod.rs  parse_mod_string.rs
libs/gsm-notifications/: Cargo.toml
libs/gsm-notifications/src/: lib.rs  notifications.rs
libs/gsm-shared/: Cargo.toml
libs/gsm-shared/src/: constants.rs  environment.rs  fetch_public_ip_address.rs  is_valid_url.rs  lib.rs  normalize_paths.rs  parse_truthy.rs
palworld/: all.html  enum.Commands.html  fn.main.html  index.html  sidebar-items.js  struct.Cli.html
scripts/: public-api-report.sh
search.index/: 0019203165d9.js  00ed196f5749.js  010ea1c22d6d.js  0128142f9a3a.js  01af1c1bafc5.js  01b85ca2fd09.js  0210984a19.js  02cc0f84cb0e.js  02e48456f06f.js  0374bd6de17f.js  03b5a5972943.js  04fb7a720c47.js  05ec7a3677c9.js  0628d4d60aa0.js  06468744e4.js  0717d67a4911.js  0721b90da612.js  075c87f3e3.js  075dfe62993a.js  07aa4d32cece.js  08358acbbdf7.js  08507091b213.js  090305df63.js  093fa5e7501e.js  0a0a10d14a.js  0a82893e7913.js  0a8e32d379.js  0aa7cc4984e8.js  0af817004161.js  0b0bd3a270b7.js  0b9a5871dba9.js  0c1ba3b30784.js  0c539bdda0.js  0cf1109c26ea.js  0cfe51d4fb03.js  0d5fcd052b.js  0d900d550a3d.js  0da19370ef.js  0e54b8570282.js  0e6123c8dd2f.js  (+331 more)
tools/env-parser/: Cargo.toml
tools/env-parser/src/: main.rs
(+228 files in other folders)
