[workspace]
members = [
    "libs/*",
    "apps/*"
]
resolver = "3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[workspace.dependencies]
clap = "4.1.14"
gsm_cron = { path = "libs/gsm-cron" }
gsm_instance = { path = "libs/gsm-instance" }
gsm_monitor = { path = "libs/gsm-monitor" }
gsm_notifications = { path = "libs/gsm-notifications" }
gsm_shared = { path = "libs/gsm-shared" }
serde = { version = "1.0.219", features = ["derive"] }
serde_ini = { path = "libs/gsm-serde" }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"

[package]
name = "swords_and_magic"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.1.14"
gsm_cron = { path = "../../libs/gsm-cron" }
gsm_instance = { path = "../../libs/gsm-instance" }
gsm_monitor = { path = "../../libs/gsm-monitor" }
gsm_notifications = { path = "../../libs/gsm-notifications" }
gsm_shared = { path = "../../libs/gsm-shared" }
serde = { version = "1.0.219", features = ["derive"] }
serde_ini = { path = "../../libs/gsm-serde" }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
