[package]
name = "enshrouded"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/mbround18/enshrouded-docker"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
gsm-instance = {path = "../../libs/gsm-instance"}
gsm-cron = {path = "../../libs/gsm-cron"}
gsm-shared = {path = "../../libs/gsm-shared"}
gsm-monitor = {path = "../../libs/gsm-monitor"}
gsm-notifications = {path ="../../libs/gsm-notifications"}
env-parse = {path = "../../libs/env-parse"}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
regex = "1.11.2"
lazy_static = "1.5.0"
chrono = { version = "0.4.41", features = ["serde"] }


[dev-dependencies]
tempfile = "3.21.0"
