[package]
name = "gsm-cli"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/mbround18/game-server-management"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
gsm-instance = { path = "../../libs/gsm-instance" }
gsm-cron = { path = "../../libs/gsm-cron" }
gsm-monitor = { path = "../../libs/gsm-monitor" }
gsm-shared = { path = "../../libs/gsm-shared" }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3.27.0"
