[package]
name = "palworld"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
gsm-instance = {path = "../../libs/gsm-instance"}
gsm-cron = {path = "../../libs/gsm-cron"}
gsm-shared = {path = "../../libs/gsm-shared"}
gsm-monitor = {path = "../../libs/gsm-monitor"}
gsm-notifications = {path ="../../libs/gsm-notifications"}
gsm-mod-manager = {path = "../../libs/gsm-mod-manager"}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
gsm-serde = {path = "../../libs/gsm-serde"}
ini-derive = {path = "../../libs/ini-derive"}
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
regex = "1.11.1"
serde_plain = "1"
lazy_static = "1.5.0"