[package]
name = "palworld"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/mbround18/palworld-docker"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
gsm-instance = {path = "../../libs/gsm-instance"}
gsm-cron = {path = "../../libs/gsm-cron"}
gsm-shared = {path = "../../libs/gsm-shared"}
gsm-monitor = {path = "../../libs/gsm-monitor"}
gsm-notifications = {path ="../../libs/gsm-notifications"}
gsm-mod-manager = {path = "../../libs/gsm-mod-manager"}
env-parse = {path = "../../libs/env-parse"}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
gsm-serde = {path = "../../libs/gsm-serde"}
ini-derive = {path = "../../libs/ini-derive"}
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros"] }
regex = "1.12.3"
serde_plain = "1"
lazy_static = "1.5.0"
