[package]
name = "gsm-cron"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0"
cron = "0"
chrono = "0.4.45"
tokio = { version = "1.52.3", features = ["macros", "rt", "time"] }
gsm-shared = { path = "../gsm-shared", version = "0.1.0" }
nix = { version = "0.31.3", features = ["signal"] }

[lints]
workspace = true
