[package]
name = "gsm-instance"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1"
tempfile = "3.27.0"
which = "8.0.2"
sysinfo = "0"
regex = "1.12.3"
strsim = "0"
tokio = { version="1.52.1", features = ["full", "process"] }
nix = "0.31.2"

[target.'cfg(unix)'.dependencies]
daemonize = "0"
