[package]
name = "gsm-instance"
version = "0.1.0"
edition = "2024"

[dependencies]
daemonize = "0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
tracing = "0.1"
tempfile = "3.21.0"
which = "8.0.0"
sysinfo = "0"
regex = "1.11.2"
strsim = "0"
tokio = { version="1.47.1", features = ["full", "process"] }
nix = "0.31.0"
flate2 = "1.1.9"
glob = "0.3.3"
tar = "0.4.45"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde_json = "1.0.149"
