[package]
name = "gsm-instance"
version = "0.1.0"
edition = "2024"

[dependencies]
daemonize = "0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1"
tempfile = "3.27.0"
which = "8.0.5"
sysinfo = "0"
regex = "1.13.1"
strsim = "0"
tokio = { version = "1.52.4", features = ["full", "process"] }
nix = "0.31.3"
flate2 = "1.1.9"
glob = "0.3.3"
tar = "0.4.46"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde_json = "1.0.150"

[lints]
workspace = true
