[package]
name = "gsm-mod-manager"
version = "0.1.0"
edition = "2024"

[lib]
name = "gsm_mod_manager"
path = "src/lib.rs"

[dependencies]
log = "0.4.26"
tempfile = "3.17.1"
walkdir = "2.5.0"
zip = "2.2.3"
fs_extra = "1"
thiserror = "2"
regex = "1"
reqwest = {version = "0", features = ["json", "default-tls", "blocking"]}
gsm_shared = {path = "../gsm-shared"}