[package]
name = "gsm-mod-manager"
version = "0.1.0"
edition = "2024"

[lib]
name = "gsm_mod_manager"
path = "src/lib.rs"

[dependencies]
tracing = "0.1"
tempfile = "3.20.0"
walkdir = "2.5.0"
zip = "7.0.0"
fs_extra = "1"
thiserror = "2"
regex = "1"
reqwest = {version = "0", features = ["json", "default-tls", "blocking"]}
gsm-shared = {path = "../gsm-shared"}
