[package]
name = "gsm-notifications"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
gsm-shared = { path = "../gsm-shared" }
tracing = "0"

[lints]
workspace = true
