[package]
name = "gsm_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1",features = ["derive", "default"] }
log = "0.4.26"
tempfile = "3.17.1"
walkdir = "2.5.0"
reqwest = {version = "0", features = ["json", "default-tls", "blocking"]}
cached = "0"
md5 = "0.7"
lazy_static = "1.5.0"
