[package]
name = "gsm-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1.0.219",features = ["derive", "default"] }
tracing = "0.1.41"
tempfile = "3.20.0"
walkdir = "2.5.0"
reqwest = {version = "0.12.15", features = ["json", "default-tls", "blocking"]}
cached = "0.55.1"
md5 = "0.7.0"
