[package]
name = "gsm-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1",features = ["derive", "default"] }
tracing = "0.1"
tempfile = "3.27.0"
walkdir = "2.5.0"
reqwest = {version = "0", features = ["json", "default-tls", "blocking"]}
cached = { version = "2", features = ["proc_macro"] }
md5 = "0.8"

[lints]
workspace = true
