[package]
name = "env-parser"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "env-parser"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
tera = "2.0.0"
regex = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"

[lints]
workspace = true
